navbar alignment fix

--- a/public/style.css
+++ b/public/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 
-#navBar {
+.navBar {
   display: flex;
   justify-content: space-around;
 }
